Closed Bug 16656 Opened 26 years ago Closed 26 years ago

tons of asserts loading page

Categories

(Core :: Layout: Tables, defect, P3)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: buster, Assigned: buster)

References

()

Details

Attachments

(1 file)

happens on several pages, including the URL www.babycenter.com stack: nsDebug::PreCondition(const char * 0x02488910, const char * 0x02488904, const char * 0x024888d0, int 378) line 262 + 13 bytes nsJISx4501LineBreaker::Next(nsJISx4501LineBreaker * const 0x035f8c50, const unsigned short * 0x03862ab0, unsigned int 1, unsigned int 1, unsigned int * 0x0012b910, int * 0x0012b91c) line 378 + 34 bytes nsTextTransformer::GetNextWord(int 0, int &0, int &1227208, int &60401856, int 1) line 241 + 38 bytes nsTextFrame::Reflow(nsTextFrame * const 0x0396b574, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 2662 + 38 bytes nsLineLayout::ReflowFrame(nsIFrame * 0x0396b570, nsIFrame * * 0x0012bd6c, unsigned int &0) line 910 nsInlineFrame::ReflowInlineFrame(nsIPresContext * 0x0381f1f0, const nsHTMLReflowState &{...}, nsInlineFrame::InlineReflowState &{...}, nsIFrame * 0x0396b570, unsigned int &0) line 1553 + 20 bytes nsInlineFrame::ReflowInlineFrames(nsIPresContext * 0x0381f1f0, const nsHTMLReflowState &{...}, nsInlineFrame::InlineReflowState &{...}, nsHTMLReflowMetrics &{...}, unsigned int &0) line 1400 + 28 bytes nsInlineFrame::Reflow(nsInlineFrame * const 0x0396ba64, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 1316 + 31 bytes nsLineLayout::ReflowFrame(nsIFrame * 0x0396ba60, nsIFrame * * 0x0012c980, unsigned int &0) line 910 nsBlockFrame::ReflowInlineFrame(nsBlockReflowState &{...}, nsLineLayout &{...}, nsLineBox * 0x039993d0, nsIFrame * 0x0396ba60, unsigned char * 0x0012bf34) line 3563 + 26 bytes nsBlockFrame::DoReflowInlineFrames(nsBlockReflowState &{...}, nsLineLayout &{...}, nsLineBox * 0x039993d0, int * 0x0012c844, unsigned char * 0x0012c6d8) line 3454 + 28 bytes nsBlockFrame::DoReflowInlineFramesAuto(nsBlockReflowState &{...}, nsLineBox * 0x039993d0, int * 0x0012c844, unsigned char * 0x0012c6d8) line 3400 + 34 bytes nsBlockFrame::ReflowInlineFrames(nsBlockReflowState &{...}, nsLineBox * 0x039993d0, int * 0x0012c844) line 3348 + 24 bytes nsBlockFrame::ReflowLine(nsBlockReflowState &{...}, nsLineBox * 0x039993d0, int * 0x0012c844, int 0) line 2560 + 20 bytes nsBlockFrame::ReflowDirtyLines(nsBlockReflowState &{...}) line 2320 + 27 bytes nsBlockFrame::Reflow(nsBlockFrame * const 0x0396af94, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 1415 + 18 bytes nsBlockReflowContext::ReflowBlock(nsIFrame * 0x0396af90, const nsRect &{...}, int 1, int 0, int 0, nsMargin &{...}, unsigned int &0) line 229 + 42 bytes nsBlockFrame::ReflowBlockFrame(nsBlockReflowState &{...}, nsLineBox * 0x0396d7a0, int * 0x0012cf28) line 3136 + 59 bytes nsBlockFrame::ReflowLine(nsBlockReflowState &{...}, nsLineBox * 0x0396d7a0, int * 0x0012cf28, int 0) line 2509 + 20 bytes nsBlockFrame::ReflowDirtyLines(nsBlockReflowState &{...}) line 2320 + 27 bytes nsBlockFrame::Reflow(nsBlockFrame * const 0x039520c4, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 1415 + 18 bytes nsContainerFrame::ReflowChild(nsIFrame * 0x039520c0, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 372 + 28 bytes nsTableCellFrame::Reflow(nsTableCellFrame * const 0x03952154, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 645 nsContainerFrame::ReflowChild(nsIFrame * 0x03952150, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 372 + 28 bytes nsTableRowFrame::InitialReflow(nsTableRowFrame * const 0x03937c10, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, RowReflowState &{...}, unsigned int &0, nsTableCellFrame * 0x00000000, int 1) line 1056 + 34 bytes nsTableRowFrame::Reflow(nsTableRowFrame * const 0x03937c14, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 1467 + 39 bytes nsContainerFrame::ReflowChild(nsIFrame * 0x03937c10, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 372 + 28 bytes nsTableRowGroupFrame::ReflowMappedChildren(nsTableRowGroupFrame * const 0x039361b0, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, RowGroupReflowState &{...}, unsigned int &0, nsTableRowFrame * 0x00000000, nsReflowReason eReflowReason_Initial, int 1, int 0) line 449 + 34 bytes nsTableRowGroupFrame::Reflow(nsTableRowGroupFrame * const 0x039361b4, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 1031 + 41 bytes nsContainerFrame::ReflowChild(nsIFrame * 0x039361b0, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 372 + 28 bytes nsTableFrame::ResizeReflowPass1(nsTableFrame * const 0x03936740, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0, nsTableRowGroupFrame * 0x00000000, nsReflowReason eReflowReason_Initial, int 1) line 2413 nsTableFrame::Reflow(nsTableFrame * const 0x03936744, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 2266 + 46 bytes nsContainerFrame::ReflowChild(nsIFrame * 0x03936740, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 372 + 28 bytes nsTableOuterFrame::Reflow(nsTableOuterFrame * const 0x039367e4, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 902 + 37 bytes nsBlockReflowContext::ReflowBlock(nsIFrame * 0x039367e0, const nsRect &{...}, int 0, int 0, int 1, nsMargin &{...}, unsigned int &0) line 229 + 42 bytes nsBlockFrame::ReflowBlockFrame(nsBlockReflowState &{...}, nsLineBox * 0x03976090, int * 0x0012e464) line 3136 + 59 bytes nsBlockFrame::ReflowLine(nsBlockReflowState &{...}, nsLineBox * 0x03976090, int * 0x0012e464, int 0) line 2509 + 20 bytes nsBlockFrame::ReflowDirtyLines(nsBlockReflowState &{...}) line 2320 + 27 bytes nsBlockFrame::Reflow(nsBlockFrame * const 0x03935134, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 1415 + 18 bytes nsBlockReflowContext::ReflowBlock(nsIFrame * 0x03935130, const nsRect &{...}, int 1, int 0, int 0, nsMargin &{...}, unsigned int &0) line 229 + 42 bytes nsBlockFrame::ReflowBlockFrame(nsBlockReflowState &{...}, nsLineBox * 0x03994bb0, int * 0x0012eb48) line 3136 + 59 bytes nsBlockFrame::ReflowLine(nsBlockReflowState &{...}, nsLineBox * 0x03994bb0, int * 0x0012eb48, int 1) line 2509 + 20 bytes nsBlockFrame::ReflowDirtyLines(nsBlockReflowState &{...}) line 2320 + 27 bytes nsBlockFrame::Reflow(nsBlockFrame * const 0x035f7364, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 1415 + 18 bytes nsBlockReflowContext::ReflowBlock(nsIFrame * 0x035f7360, const nsRect &{...}, int 1, int 0, int 1, nsMargin &{...}, unsigned int &0) line 229 + 42 bytes nsBlockFrame::ReflowBlockFrame(nsBlockReflowState &{...}, nsLineBox * 0x035f7270, int * 0x0012f22c) line 3136 + 59 bytes nsBlockFrame::ReflowLine(nsBlockReflowState &{...}, nsLineBox * 0x035f7270, int * 0x0012f22c, int 1) line 2509 + 20 bytes nsBlockFrame::ReflowDirtyLines(nsBlockReflowState &{...}) line 2320 + 27 bytes nsBlockFrame::Reflow(nsBlockFrame * const 0x035f64c4, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 1415 + 18 bytes nsAreaFrame::Reflow(nsAreaFrame * const 0x035f64c4, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 285 + 25 bytes nsContainerFrame::ReflowChild(nsIFrame * 0x035f64c0, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 372 + 28 bytes RootFrame::Reflow(RootFrame * const 0x035f47b4, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 330 nsContainerFrame::ReflowChild(nsIFrame * 0x035f47b0, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 372 + 28 bytes nsScrollFrame::Reflow(nsScrollFrame * const 0x035f42c4, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 616 nsContainerFrame::ReflowChild(nsIFrame * 0x035f42c0, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 372 + 28 bytes ViewportFrame::Reflow(ViewportFrame * const 0x035f4824, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsHTMLReflowState &{...}, unsigned int &0) line 516 nsHTMLReflowCommand::Dispatch(nsHTMLReflowCommand * const 0x03994a10, nsIPresContext &{...}, nsHTMLReflowMetrics &{...}, const nsSize &{...}, nsIRenderingContext &{...}) line 141 PresShell::ProcessReflowCommands(PresShell * const 0x035d81b0) line 1374 PresShell::ExitReflowLock(PresShell * const 0x035d81b0) line 660 PresShell::ContentAppended(PresShell * const 0x035d81b8, nsIDocument * 0x03779e80, nsIContent * 0x0363d11c, int 7) line 1813 nsDocument::ContentAppended(nsDocument * const 0x03779e80, nsIContent * 0x0363d11c, int 7) line 1526 nsHTMLDocument::ContentAppended(nsHTMLDocument * const 0x03779e80, nsIContent * 0x0363d11c, int 7) line 1041 HTMLContentSink::NotifyBody() line 282 HTMLContentSink::WillInterrupt(HTMLContentSink * const 0x0381bcf0) line 1845 CNavDTD::WillInterruptParse(CNavDTD * const 0x035dd3f0) line 3107 + 27 bytes nsParser::ResumeParse(nsIDTD * 0x00000000, int 0) line 993 nsParser::OnDataAvailable(nsParser * const 0x0381dda4, nsIChannel * 0x03783ce0, nsISupports * 0x00000000, nsIInputStream * 0x03829b98, unsigned int 0, unsigned int 5203) line 1376 + 19 bytes nsDocumentBindInfo::OnDataAvailable(nsDocumentBindInfo * const 0x03768880, nsIChannel * 0x03783ce0, nsISupports * 0x00000000, nsIInputStream * 0x03829b98, unsigned int 0, unsigned int 5203) line 1198 + 32 bytes nsChannelListener::OnDataAvailable(nsChannelListener * const 0x03782c90, nsIChannel * 0x03783ce0, nsISupports * 0x00000000, nsIInputStream * 0x03829b98, unsigned int 0, unsigned int 5203) line 1384 nsHTTPResponseListener::OnDataAvailable(nsHTTPResponseListener * const 0x0382acd0, nsIChannel * 0x03828030, nsISupports * 0x03783ce0, nsIInputStream * 0x03829b98, unsigned int 26624, unsigned int 5203) line 186 + 47 bytes nsOnDataAvailableEvent::HandleEvent(nsOnDataAvailableEvent * const 0x03873d00) line 369 nsStreamListenerEvent::HandlePLEvent(PLEvent * 0x03873cb0) line 164 + 12 bytes PL_HandleEvent(PLEvent * 0x03873cb0) line 534 + 10 bytes PL_ProcessPendingEvents(PLEventQueue * 0x00d2ea70) line 493 + 9 bytes
Status: NEW → ASSIGNED
Target Milestone: M11
Some side effect of my last checkin to the text-transformer...I'm attaching a few other bugs to this one so that I can roll them all up...
Blocks: 7455
Assignee: kipp → ftang
No longer blocks: 7455
Status: ASSIGNED → NEW
Removed dependency on 7455; it's a false alarm assertion. Reassigning to frank...
Attached file minimized test case
*** Bug 16375 has been marked as a duplicate of this bug. ***
*** Bug 16712 has been marked as a duplicate of this bug. ***
*** Bug 16607 has been marked as a duplicate of this bug. ***
Assignee: ftang → kipp
Status: NEW → ASSIGNED
I have the fix sitting in my tree; waiting on a review...
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
*** Bug 16761 has been marked as a duplicate of this bug. ***
Status: RESOLVED → VERIFIED
Using 10/20 app. verified fixed.
Blocks: 16950
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: