fix bug 16656, change the test condiction for NS_PRECONDICTION. also add some error checking code for null ptr. r=erik